# YSFileFormat

./: CMakeLists.txt  CMakePresets.json  main.c
inc/ysff/: ysff.h  ysff_type.h
src/: ysff.c
